--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -1,21 +1,12 @@
-{{!< default}}
 <div class="container">
-	<div class="jumbotron"><img src="/images/logo.svg" width="160">
-		<h1>Welcome</h1>
-		<p>This is your new <a href='http://keystonejs.com' target='_blank'>KeystoneJS</a> website.</p>
-		<p>
-			It includes the latest versions of
-			<a href='http://getbootstrap.com/' target='_blank'>Bootstrap</a>
-			and <a href='http://www.jquery.com/' target='_blank'>jQuery</a>.
-		</p>
-		<p>Visit the <a href='http://keystonejs.com/guide' target='_blank'>Getting Started</a> guide to learn how to customise it.</p>
-		<hr>
-		<p>We have created a default Admin user for you with the email <strong>john@gffny.com</strong> and the password <strong>admin</strong>.</p>
-		<p><a href="/keystone/signin" style="margin-right: 10px" class="btn btn-lg btn-primary">Sign in</a> to use the Admin UI.</p>
-		<hr>
-		<p>
-			Remember to <a href='https://github.com/keystonejs/keystone' target='_blank'>Star KeystoneJS on GitHub</a> and
-			<a href='https://twitter.com/keystonejs' target='_blank'>follow @keystonejs</a> on twitter for updates.
-		</p>
+	<div class="jumbotron">
+		<h1>John D. Gaffney</h1>
+        <h2>Engineering | Isobar US</h2>
+        <h3>Social Media</h3>
+        <ul>
+            <li>Instagram - <a href="https://www.instagram.com/gffny/">gffny</a></li>
+            <li>Twitter - <a href="https://twitter.com/gffny">gffny</a></li>
+            <li>Strava - <a href="https://www.strava.com/athletes/5091758">gffny</a></li>
+        </ul>
 	</div>
 </div>
