--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -9,4 +9,6 @@
             <li>Strava - <a href="https://www.strava.com/athletes/5091758">gffny</a></li>
         </ul>
 	</div>
+	<div>
+	</div>
 </div>
